video fixes